[FIXED]: IOS layout overflow

--- a/src/app/features/pokemon/pokemon.component.scss
+++ b/src/app/features/pokemon/pokemon.component.scss
@@ -15,6 +15,7 @@
   height: 100%;
   box-sizing: border-box;
   padding: 10px;
+  overflow-y: auto;
 
   @media (min-width: 1200px) {
     padding: 40px;
